--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,15 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: "Lucida Grande";
+}
+
+a {
+  text-decoration: none;
+}
 .main{
   background-image: url(chalkboard.jpg);
   background-size: cover;
