--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,8 +21,14 @@ a {
   padding: 0 15px;
   margin: 0 auto;
 }
-.main h2{
+.judul{
+  color: white;
+}
+.judul h2{
   letter-spacing: 5px;
   margin-bottom: 15px;
   font-size: 50px
+}
+.judul p{
+  font-size: 30px;
 }
