--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,6 +34,12 @@ a {
 }
 .btn{
   display: inline-block;
+  padding: 15px 25px;
+  border-radius: 5px;
+  opacity: 0.7;
+}
+.btn:hover{
+  opacity: 1;
 }
 .more{
   float: right;
