--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,12 +30,11 @@ a {
   font-size: 50px;
 }
 .judul p{
-  font-size: 15px;
+  font-size: 20px;
 }
 .btn{
   display: inline-block;
   padding: 15px 25px;
-  border-radius: 5px;
   opacity: 0.7;
 }
 .btn:hover{
@@ -46,4 +45,11 @@ a {
 }
 .read{
   background-color: green;
+  cursor: pointer;
+  block-shadow: 0 7px #1a7940;
+}
+.read:active {
+  position: relative;
+  top: 7px;
+  box-shadow: none;
 }
