--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,14 +34,6 @@ a {
   opacity: 1;
 }
 
-.menu-icon{
-  color: white;
-  float: right;
-  font-size: 25px;
-  padding: 21px 0;
-  display: none;
-}
-
 .program {
   padding-bottom: 80px;
   padding-left: 5%;
@@ -74,24 +66,14 @@ a {
   color: #b3aeb5;
 }
 
-.heading h3 {
-  font-weight: normal;
-}
-
-.message-wrapper {
-  border-bottom: 1px solid #eee;
-  padding-bottom: 80px;
-  text-align: center;
-}
-
-.message {
+.read {
   padding: 15px 40px;
   background-color: #5dca88;
   cursor: pointer;
   box-shadow: 0 7px #1a7940;
 }
 
-.message:active {
+.read:active {
   position: relative;
   top: 7px;
   box-shadow: none;
